k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: blueprint
  labels:
    app.kubernetes.io/part-of: cloud-native-blueprint
